--- a/.framework/node/backend/package.json
+++ b/.framework/node/backend/package.json
@@ -6,10 +6,10 @@
     "node": "^16"
   },
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "seeds": "node scripts/seeds.js",
-    "test": "newman run tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
+    "seeds": "node ./scripts/seeds.js",
+    "test": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
     "stop": "lsof -ti :3000 | xargs kill"
   },
   "dependencies": {
