--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -16,6 +16,7 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Run checks
+        working-directory: .framework/node/backend
         uses: actions/setup-node@v3
         with:
           node-version: "16"
