added subdir support

--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: "16"
           cache: "yarn"
+          cache-dependency-path: .framework/node/backend
 
       - run: yarn install
         working-directory: .framework/node/backend
