--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -22,6 +22,11 @@ jobs:
           cache: "yarn"
           cache-dependency-path: .framework/node/backend
 
+      - name: Start MongoDB
+          uses: supercharge/mongodb-github-action@1.6.0
+          with:
+            mongodb-version: "4.4"
+
       - run: yarn install
         working-directory: .framework/node/backend
       - run: yarn start-test
