--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run: yarn install
         working-directory: .framework/node/backend
-      - run: yarn start-test
+      - run: yarn start-test >& /dev/null &
         working-directory: .framework/node/backend
       - run: yarn install
         working-directory: .tests/http-tests/
