--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -32,6 +32,6 @@ jobs:
       - run: yarn start-test >& /dev/null &
         working-directory: .framework/node/backend
       - run: yarn install
-        working-directory: .tests/http-tests/
+        working-directory: tests/http-tests/
       - run: yarn test
-        working-directory: .tests/http-tests/
+        working-directory: tests/http-tests/
