--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -1,6 +1,5 @@
-name: Continuous Integration
+name: Continuous Integration Node
 
-# This action works with pull requests and pushes
 on:
   pull_request:
 
