--- a/.github/workflows/test_api_python.yml
+++ b/.github/workflows/test_api_python.yml
@@ -42,11 +42,10 @@ jobs:
       - run: pip install gunicorn
         working-directory: .framework/python/backend
 
-      - run: /bin/bash -c SECRET_KEY=secret DATABASE_URL=***localhost/anythink-market alembic upgrade head
+      - run: /bin/bash -c SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market alembic upgrade head
         working-directory: .framework/python/backend
 
-
-      - run: /bin/bash -c SECRET_KEY=secret DATABASE_URL=***localhost/anythink-market  gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5 >& /dev/null &
+      - run: /bin/bash -c SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market  gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5
         working-directory: .framework/python/backend
 
       - run: yarn install
