--- a/.github/workflows/test_api_rails.yml
+++ b/.github/workflows/test_api_rails.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          working-directory: backend
+          working-directory: .framework/rails/backend
           bundler-cache: true
 
       - run: bundle install
@@ -41,5 +41,6 @@ jobs:
 
       - run: yarn install
         working-directory: tests/http-tests/
+
       - run: yarn test
         working-directory: tests/http-tests/
