added wilco id to run commands

--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run: yarn install
         working-directory: .framework/node/backend
-      - run: yarn anythink-market-test >& /dev/null &
+      - run: WILCO_ID=0 MONGODB_URI=mongodb://localhost/anythink-market yarn start >& /dev/null &
         working-directory: .framework/node/backend
       - run: yarn install
         working-directory: tests/http-tests/
