--- a/.github/workflows/test_api_rails.yml
+++ b/.github/workflows/test_api_rails.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: .framework/rails/backend
 
       - run: yarn install
-        working-directory: tests/http-tests/
+        working-directory: tests/API/
 
       - run: yarn test
-        working-directory: tests/http-tests/
+        working-directory: tests/API/
