--- a/.github/workflows/test_api_lint.yml
+++ b/.github/workflows/test_api_lint.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   lint:
     name: Pr checks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 6
     steps:
       - name: Checkout
