--- a/.github/workflows/test_api_python.yml
+++ b/.github/workflows/test_api_python.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   ci-checks:
     name: Pr checks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     timeout-minutes: 6
 
     services:
