--- a/.github/workflows/test_api_node.yml
+++ b/.github/workflows/test_api_node.yml
@@ -36,7 +36,7 @@ jobs:
       - run: yarn install
         working-directory: tests/API/
 
-      - run: yarn wait-on http://localhost:3000/api/v1/health --timeout 5000  yarn test
+      - run: yarn wait-on http://localhost:3000/health --timeout 5000
         working-directory: tests/API/
 
       - run: yarn test
