removed python wait-on

--- a/.github/workflows/test_api_python.yml
+++ b/.github/workflows/test_api_python.yml
@@ -48,8 +48,8 @@ jobs:
       - run: yarn install
         working-directory: tests/API/
 
-      - run: yarn wait-on http://0.0.0.0:3000/health --timeout 20000
-        working-directory: tests/API/
+#      - run: yarn wait-on http://0.0.0.0:3000/health --timeout 20000
+#        working-directory: tests/API/
 
       - run: yarn test
         working-directory: tests/API/
