--- a/.github/workflows/test_api_python.yml
+++ b/.github/workflows/test_api_python.yml
@@ -48,7 +48,7 @@ jobs:
       - run: yarn install
         working-directory: tests/API/
 
-      - run: yarn wait-on -v http://0.0.0.0:3000/health --timeout 20000
+      - run: yarn wait-on -v http-get://0.0.0.0:3000/health --timeout 20000
         working-directory: tests/API/
 
       - run: yarn test
