--- a/.github/workflows/test_e2e_rails.yml
+++ b/.github/workflows/test_e2e_rails.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration Rails
+name: E2E Rails
 
 on:
   pull_request:
@@ -30,13 +30,17 @@ jobs:
           working-directory: .framework/rails/backend
           bundler-cache: true
 
+      - uses: oNaiPs/secrets-to-env-action@v1
+        with:
+          secrets: ${{ toJSON(secrets) }}
+
       - run: bundle install
         working-directory: .framework/rails/backend
 
       - run: DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market  bin/rails db:create db:migrate
         working-directory: .framework/rails/backend
 
-      - run: ENGINE_URL=http://localhost:3003 WILCO_ID=0 DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market bin/rails s >& /dev/null &
+      - run: ENGINE_BASE_URL=http://localhost:3003 WILCO_ID=0 DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market bin/rails s >& /dev/null &
         working-directory: .framework/rails/backend
 
       - run: yarn install
