--- a/.github/workflows/test_e2e_python.yml
+++ b/.github/workflows/test_e2e_python.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration Python
+name: E2E Python
 
 on:
   pull_request:
@@ -32,6 +32,9 @@ jobs:
         with:
           python-version: "3.9.13"
 
+      - uses: oNaiPs/secrets-to-env-action@v1
+        with:
+          secrets: ${{ toJSON(secrets) }}
 
       - run: pip install -r requirements.txt
         working-directory: .framework/python/backend
@@ -39,16 +42,18 @@ jobs:
       - run: pip install gunicorn
         working-directory: .framework/python/backend
 
-      - run: SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market alembic upgrade head
+      - name: Run postgres migration
+        run: SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market alembic upgrade head
         working-directory: .framework/python/backend
 
-      - run: ENGINE_URL=http://localhost:3003 WILCO_ID=0 SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market  gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5 >& /dev/null &
+      - name: Run python server
+        run: ENGINE_BASE_URL=http://localhost:3003 WILCO_ID=0 SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market  gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5 >& /dev/null &
         working-directory: .framework/python/backend
 
       - run: yarn install
         working-directory: tests/API/
 
-      - run: yarn wait-on -v http-get://0.0.0.0:3000/health --timeout 20000
+      - run: yarn wait-on -v http-get://0.0.0.0:3000/health --timeout 5000
         working-directory: tests/API/
 
       - run: yarn test
