adde yarn install to the lint action

--- a/.github/workflows/test_e2e_lint.yml
+++ b/.github/workflows/test_e2e_lint.yml
@@ -14,5 +14,8 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - run: yarn install
+        working-directory: tests/API
+
       - run: yarn lint
         working-directory: tests/API
