testing the catch

--- a/.github/workflows/test_e2e_python.yml
+++ b/.github/workflows/test_e2e_python.yml
@@ -47,7 +47,7 @@ jobs:
         working-directory: .framework/python/backend
 
       - name: Run python server
-        run: ENGINE_BASE_URL=http://localhost:3003 WILCO_ID=0 SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market  gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5 >& /dev/null &
+        run:  WILCO_ID=0 SECRET_KEY=secret DATABASE_URL=postgresql://postgres:postgres@localhost/anythink-market  gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5 >& /dev/null &
         working-directory: .framework/python/backend
 
       - run: yarn install
