fix wirkinf dir

--- a/.github/workflows/test_frontend_react.yml
+++ b/.github/workflows/test_frontend_react.yml
@@ -40,13 +40,13 @@ jobs:
         run: yarn install
         working-directory: .framework/react/frontend
 
-#      - name: Install Playwright Browsers
-#        run: yarn playwright install --with-deps
-#        working-directory: .framework/react/frontend
+       - name: Install playwright chrome
+         run: yarn playwright install-deps chromium
+         working-directory: tests/frontend
 
       - name: Run Playwright tests
         run: yarn playwright test
-        working-directory: .framework/react/frontend
+        working-directory: tests/frontend
 
       - uses: actions/upload-artifact@v3
         if: always()
