--- a/.github/workflows/test_frontend_react.yml
+++ b/.github/workflows/test_frontend_react.yml
@@ -18,23 +18,7 @@ jobs:
         with:
           node-version: "16"
           cache: "yarn"
-          cache-dependency-path: .framework/node/backend
-
-      - uses: oNaiPs/secrets-to-env-action@v1
-        with:
-          secrets: ${{ toJSON(secrets) }}
-
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.6.0
-        with:
-          mongodb-version: "4.4"
-
-      - run: yarn install
-        working-directory: .framework/node/backend
-
-      - name: Run server
-        run: ENGINE_BASE_URL=http://localhost:3003 WILCO_ID=0 MONGODB_URI=mongodb://localhost/anythink-market yarn start >& /dev/null &
-        working-directory: .framework/node/backend
+          cache-dependency-path: .framework/react/frontend
 
       - name: Install dependencies
         run: yarn install
