--- a/.github/workflows/test_frontend_react.yml
+++ b/.github/workflows/test_frontend_react.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   test:
     timeout-minutes: 6
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
