--- a/.github/workflows/test_e2e_python.yml
+++ b/.github/workflows/test_e2e_python.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.9.13"
+          cache: 'pip'
 
       - uses: oNaiPs/secrets-to-env-action@v1
         with:
@@ -55,7 +56,7 @@ jobs:
         with:
           node-version: "16"
           cache: "yarn"
-          cache-dependency-path: .framework/node/backend
+          cache-dependency-path: tests/e2e/
 
       - run: yarn install
         working-directory: tests/e2e/
