--- a/.github/workflows/test_e2e_lint.yml
+++ b/.github/workflows/test_e2e_lint.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - name: Run checks
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "yarn"
+          cache-dependency-path: tests/e2e/
+
       - run: yarn install
         working-directory: tests/e2e
 
