--- a/.github/workflows/test_e2e_rails.yml
+++ b/.github/workflows/test_e2e_rails.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           node-version: "16"
           cache: "yarn"
-          cache-dependency-path: tests/e2e/
+          cache-dependency-path: tests/e2e/yarn.lock
 
       - run: yarn install
         working-directory: tests/e2e/
