--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,5 +38,9 @@
     "workbench.welcomePage.walkthroughs.openOnInstall": false,
     "workbench.welcomePage.experimental.videoTutorials": "off",
     "github.codespaces.defaultExtensions": []
+    },
+  "features": {
+	  "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   }
+  
 }
