--- a/.framework/java/backend/build.gradle
+++ b/.framework/java/backend/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
+    testImplementation 'com.h2database:h2:1.4.200'
 }
 
 tasks.named('test') {
