--- a/.framework/java/backend/Dockerfile.aws
+++ b/.framework/java/backend/Dockerfile.aws
@@ -4,6 +4,6 @@ WORKDIR /usr/src
 COPY backend ./backend
 COPY .wilco ./.wilco
 
-# Pre-install npm packages
+# Pre-install packages
 WORKDIR /usr/src/backend
 RUN ./gradlew build
