--- a/.framework/python/docker-compose.yml
+++ b/.framework/python/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             poetry export -f "requirements.txt" --without-hashes --with-credentials > "requirements.txt"
             /wait-for-it.sh postgres-python:5432 -q -t 60 && 
             poetry run alembic upgrade head &&
-            poetry run gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5"
+            poetry run gunicorn app.main:app --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:3000 --workers=5 --reload"
     working_dir: /usr/src
     volumes:
       - ./:/usr/src
