--- a/.framework/python/docker-compose.yml
+++ b/.framework/python/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   anythink-backend-python:
     build: ./backend
+    image: public.ecr.aws/v0a2l7y2/wilco/anythink-backend-python:latest
     container_name: anythink-backend-python
     command: >
       sh -c "cd backend &&
@@ -24,9 +25,9 @@ services:
       - "postgres-python"
 
   anythink-frontend-react:
-    build: ./frontend
+    image: public.ecr.aws/v0a2l7y2/wilco/anythink-frontend-react:latest
     container_name: anythink-frontend-react
-    command: sh -c "cd frontend && yarn install && /wait-for-it.sh anythink-backend-python:3000 -t 120 --strict -- curl --head -X GET --retry 30 --retry-connrefused --retry-delay 1 anythink-backend-python:3000/api/ping && yarn start"
+    command: sh -c "cd frontend && /wait-for-it.sh anythink-backend-python:3000 -t 120 --strict -- curl --head -X GET --retry 30 --retry-connrefused --retry-delay 1 anythink-backend-python:3000/api/ping && yarn start"
     environment:
       - NODE_ENV=development
       - PORT=3001
