--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,8 @@
 name: 🐛 Bug Report
 description: Report a bug or unexpected behavior
-title: "[Bug]: "
+title: "[Bug]:"
 labels: [bug]
-assignees: ""
+assignees: "true"
 
 body:
   - type: markdown
